<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/activity_user_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_big"
        android:visibility="visible"
        tools:context=".user.UserDetailActivity">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/detail_avatar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/circle_image_size_big"
            android:layout_marginTop="@dimen/padding_big"
            android:layout_gravity="center_horizontal"
            tools:src="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/detail_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/padding_big"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_avatar"
            android:textSize="@dimen/size_text_big"
            android:textStyle="bold"
            android:text="@string/username"/>

        <TextView
            android:id="@+id/detail_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/padding_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_username"
            android:textSize="@dimen/size_text_medium"
            android:text="@string/full_name"/>

        <TextView
            android:id="@+id/detail_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_big"
            android:layout_marginStart="@dimen/padding_medium"
            android:layout_marginEnd="@dimen/padding_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_name"
            android:textSize="@dimen/size_text_small"
            android:text="@string/company"/>

        <TextView
            android:id="@+id/detail_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_medium"
            android:layout_marginStart="@dimen/padding_medium"
            android:layout_marginEnd="@dimen/padding_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_company"
            android:textSize="@dimen/size_text_small"
            android:text="@string/location"/>

        <TextView
            android:id="@+id/detail_repo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_medium"
            android:layout_marginStart="@dimen/padding_medium"
            android:layout_marginEnd="@dimen/padding_medium"
            android:layout_marginBottom="@dimen/padding_big"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_location"
            android:textSize="@dimen/size_text_small"
            android:text="@string/repo_totals"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_repo"
            android:layout_marginTop="@dimen/padding_medium"
            android:id="@+id/follow_layout"
            android:layout_marginBottom="@dimen/padding_medium">

            <TextView
                android:id="@+id/detail_following_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/following"
                android:textSize="@dimen/size_text_medium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detail_follower_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/follower"
                android:textSize="@dimen/size_text_medium"
                android:textStyle="bold" />

        </LinearLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/follow_tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/follow_layout"
            android:background="@color/white"
            app:tabTextColor="@color/black"/>


        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/follow_tabs"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>